src/tests/snapshots/snapshots/dart_typegen__tests__snapshots__class_docs.snap
---
source: src/tests/snapshots/mod.rs
expression: dart
---
// ignore_for_file: unnecessary_cast
/// Single line docs
final class Foo {
  final String x;

  const Foo({required this.x});

  static FooBuilder builder({required String x}) => FooBuilder(x: x);
  FooBuilder toBuilder() => FooBuilder(x: x);

  Map<String, dynamic> toJson() => {"x": x};
  factory Foo.fromJson(Map<String, dynamic> json) =>
      Foo(x: json["x"] as String);

  @override
  String toString() =>
      "Foo("
      "x: $x"
      ")";
  @override
  bool operator ==(Object other) {
    if (identical(this, other)) {
      return true;
    }
    if (other is! Foo) {
      return false;
    }
    if (x != other.x) {
      return false;
    }
    return true;
  }

  @override
  int get hashCode => Object.hashAll([x.hashCode]);
}

/// Builder class for [Foo]
final class FooBuilder {
  String x;

  FooBuilder({required this.x});

  Foo build() => Foo(x: x);
}

/// Multi line docs
///
/// More stuff
final class Bar {
  final String x;

  const Bar({required this.x});

  static BarBuilder builder({required String x}) => BarBuilder(x: x);
  BarBuilder toBuilder() => BarBuilder(x: x);

  Map<String, dynamic> toJson() => {"x": x};
  factory Bar.fromJson(Map<String, dynamic> json) =>
      Bar(x: json["x"] as String);

  @override
  String toString() =>
      "Bar("
      "x: $x"
      ")";
  @override
  bool operator ==(Object other) {
    if (identical(this, other)) {
      return true;
    }
    if (other is! Bar) {
      return false;
    }
    if (x != other.x) {
      return false;
    }
    return true;
  }

  @override
  int get hashCode => Object.hashAll([x.hashCode]);
}

/// Builder class for [Bar]
final class BarBuilder {
  String x;

  BarBuilder({required this.x});

  Bar build() => Bar(x: x);
}
