src/tests/snapshots/snapshots/dart_typegen__tests__snapshots__class_extra_dart.snap
---
source: src/tests/snapshots/mod.rs
expression: dart
---
final class Foo {
  final String x;

  const Foo({required this.x});

  static FooBuilder builder({required String x}) => FooBuilder(x: x);
  FooBuilder toBuilder() => FooBuilder(x: x);

  Map<String, dynamic> toJson() => {"x": x};
  factory Foo.fromJson(Map<String, dynamic> json) =>
      Foo(x: json["x"] as String);

  @override
  String toString() =>
      "Foo("
      "x: $x"
      ")";
  @override
  bool operator ==(Object other) {
    if (identical(this, other)) {
      return true;
    }
    if (other is! Foo) {
      return false;
    }
    if (x != other.x) {
      return false;
    }
    return true;
  }

  @override
  int get hashCode => Object.hashAll([x.hashCode]);

  void baz() {
    print(x);
  }
}

/// Builder class for [Foo]
final class FooBuilder {
  String x;

  FooBuilder({required this.x});

  Foo build() => Foo(x: x);
}
