src/tests/snapshots/snapshots/dart_typegen__tests__snapshots__class_field_docs.snap
---
source: src/tests/snapshots/mod.rs
expression: dart
---
// ignore_for_file: unnecessary_cast
final class Foo {
  /// single line doc
  final String x;

  /// A multi-line doc
  ///
  /// Some more stuff
  final String y;

  const Foo({required this.x, required this.y});

  static FooBuilder builder({required String x, required String y}) =>
      FooBuilder(x: x, y: y);
  FooBuilder toBuilder() => FooBuilder(x: x, y: y);

  Map<String, dynamic> toJson() => {"x": x, "y": y};
  factory Foo.fromJson(Map<String, dynamic> json) =>
      Foo(x: json["x"] as String, y: json["y"] as String);

  @override
  String toString() =>
      "Foo("
      "x: $x, "
      "y: $y"
      ")";
  @override
  bool operator ==(Object other) {
    if (identical(this, other)) {
      return true;
    }
    if (other is! Foo) {
      return false;
    }
    if (x != other.x) {
      return false;
    }
    if (y != other.y) {
      return false;
    }
    return true;
  }

  @override
  int get hashCode => Object.hashAll([x.hashCode, y.hashCode]);
}

/// Builder class for [Foo]
final class FooBuilder {
  String x;
  String y;

  FooBuilder({required this.x, required this.y});

  Foo build() => Foo(x: x, y: y);
}
