src/tests/snapshots/snapshots/dart_typegen__tests__snapshots__enum_extra_dart.snap
---
source: src/tests/snapshots/mod.rs
expression: dart
---
// ignore_for_file: unnecessary_cast
enum Foo {
  a,
  b;

  factory Foo.fromJson(dynamic json) => switch (json) {
    "a" => Foo.a,
    "b" => Foo.b,
    final other => throw ArgumentError("Unknown variant: $other"),
  };

  dynamic toJson() => switch (this) {
    Foo.a => "a",
    Foo.b => "b",
  };
  @override
  String toString() => switch (this) {
    Foo.a => "a",
    Foo.b => "b",
  };

  void foo() => print(this);
}
