src/tests/snapshots/snapshots/dart_typegen__tests__snapshots__enum_json_value.snap
---
source: src/tests/snapshots/mod.rs
expression: dart
---
enum Color {
  red,
  green,
  blue;

  factory Color.fromJson(dynamic json) => switch (json) {
    "something-else" => Color.red,
    123 => Color.green,
    true => Color.blue,
    final other => throw ArgumentError("Unknown variant: $other"),
  };

  dynamic toJson() => switch (this) {
    Color.red => "something-else",
    Color.green => 123,
    Color.blue => true,
  };
  @override
  String toString() => switch (this) {
    Color.red => "red",
    Color.green => "green",
    Color.blue => "blue",
  };
}
