src/tests/snapshots/snapshots/dart_typegen__tests__snapshots__enum_simple.snap
---
source: src/tests/snapshots/mod.rs
expression: output
---
import "package:equatable/equatable.dart";
