src/tests/snapshots/snapshots/dart_typegen__tests__snapshots__postamble.snap
---
source: src/tests/snapshots/mod.rs
expression: dart
---
// ignore_for_file: unnecessary_cast

void someCode() {}
