src/tests/snapshots/snapshots/dart_typegen__tests__snapshots__type_list.snap
---
source: src/tests/snapshots/mod.rs
expression: dart
---
final class Foo {
  final List<String> x;
  final List<int> y;

  const Foo({required this.x, required this.y});

  static FooBuilder builder({required List<String> x, required List<int> y}) =>
      FooBuilder(x: x, y: y);
  FooBuilder toBuilder() => FooBuilder(x: x, y: y);

  Map<String, dynamic> toJson() => {
    "x": x.map((inner) => inner).toList(),
    "y": y.map((inner) => inner).toList(),
  };
  factory Foo.fromJson(Map<String, dynamic> json) => Foo(
    x: (json["x"] as List<dynamic>)
        .map<String>((inner) => inner as String)
        .toList(),
    y: (json["y"] as List<dynamic>).map<int>((inner) => inner as int).toList(),
  );

  @override
  String toString() =>
      "Foo("
      "x: $x, "
      "y: $y"
      ")";
  @override
  bool operator ==(Object other) {
    if (identical(this, other)) {
      return true;
    }
    if (other is! Foo) {
      return false;
    }
    if (x.length != other.x.length) {
      return false;
    }
    for (var i = 0; i < x.length; i++) {
      if (x[i] != other.x[i]) {
        return false;
      }
    }
    if (y.length != other.y.length) {
      return false;
    }
    for (var i = 0; i < y.length; i++) {
      if (y[i] != other.y[i]) {
        return false;
      }
    }
    return true;
  }

  @override
  int get hashCode => Object.hashAll([
    Object.hashAll(x.map((elem) => elem.hashCode)),
    Object.hashAll(y.map((elem) => elem.hashCode)),
  ]);
}

/// Builder class for [Foo]
final class FooBuilder {
  List<String> x;
  List<int> y;

  FooBuilder({required this.x, required this.y});

  Foo build() => Foo(x: x, y: y);
}
